[tool.poetry]
name = "obp"
version = "0.5.5"
description = "Open Bandit Pipeline: a python library for off-policy evaluation and learning"
authors = ["Yuta Saito <ys552@cornell.edu>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = "2.6.0"
scikit-learn = "^1.5.2"
pandas = "^2.1.0"
numpy = "^1.25.0"
matplotlib = "^3.8.0"
tqdm = "^4.65.0"
scipy = "~1.15.2"
PyYAML = "^6.0.1"
seaborn = "^0.12.2"
pyieoe = "^0.1.1"
pingouin = "^0.4.0"
mypy-extensions = "^0.4.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^3.9.2"
black = "22.1.0"
pytest = "^6.2.5"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["obp", "tests", "examples", "benchmark"]
line_length = 88
lines_after_imports = 2
force_single_line = true
force_sort_within_sections = true
order_by_type = false

[tool.pytest.ini_options]
addopts = "--color=yes"
